@@ -1,5 +1,7 @@
 2006-01-26  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* flower/file-path.cc (path::parse_path): Oops.
+
 	* Finish std::string interface.  For now, use std:: marker
 	throughout for easy s/r.
 
